--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <Title>SAM</Title>
+    <title>SAM</title>
     <link rel="icon" type="image/png" href="assets/img/logo.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="contenitore">
             <nav class="navMenu">
                 <ul class="lstMenu">
                     <li class="itemMenuLogo">
@@ -37,20 +37,98 @@
         </div>
     </header>
     <main>
-<section class="banner" id="bannerInspire">
-    <div class="container">
-        <div class="bannerContent">
-            <div class="info">
-                <p class="title">I INSPIRE CREATORS INTO MAKING STUFF.</p>
-                <p class="description">I create everyday to prove that anyone can do it with the help of creativity. <br>
-                    So maybe it’s also your time to take the jump!</p>
-                    <a class="btnPrimary" href="workshops.html">Explore workshops</a>
+        <section class="InformazioniBanner" id="bannerInspire">
+            <div class="contenitore">
+                <div class="bannerContenuto">
+                    <div class="informazioni">
+                        <p class="titolo">I inspire creators into <br> making stuff.</p>
+                        <p class="descrizione">I create everyday to prove that anyone can do it <br> with the help of
+                            creativity. <br>
+                            So maybe it’s also your time to take the jump!</p>
+                        <a class="btnPrimary" href="workshops.html">Explore workshops</a>
+                    </div>
+                    <img class="imgBanner" src="assets/img/about/bannerJump.png" />
+                </div>
             </div>
-            <img src="assets/img/about/bannerJump.png"/>
-        </div>
-    </div>
-</section>
+        </section>
+
+        <section class="Banner">
+            <div class="contenitore">
+                <img class="imgBanner" src="assets/img/about/skillset.png">
+            </div>
+        </section>
+
+        <section class="InformazioniBanner">
+            <div class="contenitore">
+                <div class="bannerContenuto">
+                    <div class="informazioni">
+                        <div class="improntaDigitaleContenitore">
+                            <p class="titolo">My story</p>
+                            <img style="left: 190px; top: -30px;" class="improntaDigitale"
+                                src="assets/img/improntaDigitale.png">
+                        </div>
+                        <p class="descrizione">My story starts about four years ago.<br>
+                            Casually I came across the world of tufting and design. Since then, I haven’t <br> stopped
+                            creating for a single day, chasing the necessity of expressing my <br> creative vision onto
+                            everything that surrounds me.</p>
+                    </div>
+                    <img src="assets/img/about/bannerWalk.png" />
+                </div>
+            </div>
+        </section>
+
+        <section class="PreFooter">
+            <div class="improntaDigitaleContenitore">
+                <img style="right: 0; top: 60px; transform: rotate(-65deg);" class="improntaDigitale"
+                    src="assets/img/improntaDigitale.png">
+                <img style="right: 0; top: 5px; height: 64px;" class="improntaDigitale"
+                    src="assets/img/improntaDigitale.png">
+                <div class="contenitore">
+                    <div class="preFooterContenuto">
+                        <div class="contenuto">
+                            <img src="assets/img/about/ioScontornato1.png" />
+                            <div class="azioni">
+                                <a class="btnPrimary" style="min-width: 250px; font-size: 36px;" href="work.html">Some
+                                    work</a>
+                                <a class="btnPrimary" style="width: fit-content; font-size: 36px;"
+                                    href="work.html">-></a>
+                            </div>
+                            <img src="assets/img/about/ioScontornato2.png" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="Disclaimer">
+            <div class="contenitore">
+                <p>Let's make stuff together!</p>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <img style="left: -26px; top: -126px; transform: rotate(-65deg);" class="improntaDigitale"
+            src="assets/img/improntaDigitale.png">
+        <img style="left: 30px; top: -94px; height: 86px;" class="improntaDigitale" src="assets/img/improntaDigitale.png">
+        <div class="strappo"></div>
+        <div class="contenitore">
+            <div class="footerContenuto">
+                <div class="sezioneFooter">
+                    <p class="titolo">Get to know me!</p>
+                    <p class="testo">@strafattoaman0</p>
+                    <p class="testo">@strafattoalmercato</p>
+                </div>
+                <a href="index.html">
+                    <img src="assets/img/logo.png">
+                </a>
+                <div class="sezioneFooter destra">
+                    <p class="titolo">Lest's link!</p>
+                    <p class="testo">strafattoamanosam@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
