--- a/work.html
+++ b/work.html
@@ -48,7 +48,7 @@
                             implement knowlege to my skillset. <br>
                             These are some of the best jobs I’ve completed during my journey as a creative.</p>
                         <div class="improntaDigitaleContenitore">
-                            <a class="btnPrimary" href="workshops.html">Contact me</a>
+                            <a class="btnPrimary" href="#footer">Contact me</a>
                             <img style="left: 190px; top: -30px;" class="improntaDigitale"
                                 src="assets/img/improntaDigitale.png">
                         </div>
@@ -58,9 +58,9 @@
             </div>
         </section>
 
-        <section class="CollegamentoBanner">
+        <section class="Fotografia">
             <div class="contenitore">
-                <a class="collegamento" href="work/bones.html">
+                <a class="fotografiaContenuto" href="work/bones.html">
                     <p class="titolo">Bones</p>
                     <img class="immagine" src="assets/img/work/bones/bones.png" />
                     <p class="credito">Art Direction , Handcrafting</p>
@@ -68,10 +68,10 @@
             </div>
         </section>
 
-        <section class="CollegamentoBanner">
+        <section class="Fotografia">
             <div class="improntaDigitaleContenitore">
                 <div class="contenitore">
-                    <a class="collegamento destra" href="work/onfire.html">
+                    <a class="fotografiaContenuto destra" href="work/onfire.html">
                         <p class="titolo">On fire</p>
                         <img class="immagine" src="assets/img/work/onfire/onfire.png" />
                         <p class="credito">Videomaking</p>
@@ -84,9 +84,9 @@
             </div>
         </section>
 
-        <section class="CollegamentoBanner">
+        <section class="Fotografia">
             <div class="contenitore">
-                <a class="collegamento" href="work/strafattomano.html">
+                <a class="fotografiaContenuto" href="work/strafattomano.html">
                     <p class="titolo">Strafattomano</p>
                     <img class="immagine" src="assets/img/work/strafattomano/strafattomano.png" />
                     <p class="credito">Rug making, Handcrafting</p>
@@ -94,9 +94,9 @@
             </div>
         </section>
 
-        <section class="CollegamentoBanner">
+        <section class="Fotografia">
             <div class="contenitore">
-                <a class="collegamento destra" href="work/strafattoalmercato.html">
+                <a class="fotografiaContenuto destra" href="work/strafattoalmercato.html">
                     <p class="titolo">Strafattoalmercato</p>
                     <img class="immagine" src="assets/img/work/strafattoalmercato/strafattoalmercato.png" />
                     <p class="credito">Content creation,Art Direction</p>
@@ -115,7 +115,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer id="footer">
         <img style="left: -26px; top: -126px; transform: rotate(-65deg);" class="improntaDigitale"
             src="assets/img/improntaDigitale.png">
         <img style="left: 30px; top: -94px; height: 86px;" class="improntaDigitale"
