--- a/work/bones.html
+++ b/work/bones.html
@@ -54,7 +54,11 @@
             <div class="contenitore">
                 <div class="informazioniProgettoContenuto">
                     <div class="informazioni">
-                        <p class="titolo">Essence of Project</p>
+                        <div class="improntaDigitaleContenitore">
+                            <p class="titolo">Essence of Project</p>
+                            <img style="left: -90px; top: -48px;" class="improntaDigitale"
+                                src="../assets/img/improntaDigitale.png">
+                        </div>
                         <p class="descrizione">Give birth to a capsule collection in collaboration with <br>
                             XNOVO, an up cycling brand based in Rome, Italy. <br> <br>
                             Project insight? <br>
@@ -87,21 +91,21 @@
             </div>
         </section>
 
-        <section class="LstCollegamentoBanner">
+        <section class="LstFotografia">
             <div class="contenitore">
-                <div class="LstCollegamentoBannerContenuto">
-                    <div class="CollegamentoBanner">
+                <div class="LstFotografiaContenuto">
+                    <div class="Fotografia">
                         <div class="contenitore">
-                            <div class="collegamento">
+                            <div class="fotografiaContenuto">
                                 <img class="immagine" src="../assets/img/work/bones/promotionalBones.png" />
                                 <p class="credito">Promotional Bones <br> Campaign - 2021</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="CollegamentoBanner">
+                    <div class="Fotografia">
                         <div class="contenitore">
-                            <div class="collegamento">
+                            <div class="fotografiaContenuto">
                                 <img class="immagine" src="../assets/img/work/bones/promotionalBones2.png" />
                                 <p class="credito">Promotional Bones <br> Campaign - 2021</p>
                             </div>
