--- a/work/bones.html
+++ b/work/bones.html
@@ -44,9 +44,13 @@
         </section>
 
         <section class="Banner">
-            <div class="contenitore">
-                <p class="titolo">Bones</p>
-                <img class="imgBanner" src="../assets/img/work/bones/bones.png">
+            <div class="improntaDigitaleContenitore">
+                <div class="contenitore">
+                    <p class="titolo">Bones</p>
+                    <img class="imgBanner" src="../assets/img/work/bones/bones.png">
+                    <img style="right: -10px; bottom: 0px;" class="improntaDigitale"
+                        src="../assets/img/improntaDigitale.png">
+                </div>
             </div>
         </section>
 
@@ -94,21 +98,22 @@
         <section class="LstFotografia">
             <div class="contenitore">
                 <div class="LstFotografiaContenuto">
-                    <div class="Fotografia">
-                        <div class="contenitore">
+                    <div class="improntaDigitaleContenitore">
+                        <div class="Fotografia">
                             <div class="fotografiaContenuto">
                                 <img class="immagine" src="../assets/img/work/bones/promotionalBones.png" />
                                 <p class="credito">Promotional Bones <br> Campaign - 2021</p>
                             </div>
                         </div>
+                        <img style="left: -100px; top: -100px; transform: rotate(-55deg);" class="improntaDigitale"
+                            src="../assets/img/improntaDigitale.png">
                     </div>
 
+
                     <div class="Fotografia">
-                        <div class="contenitore">
-                            <div class="fotografiaContenuto">
-                                <img class="immagine" src="../assets/img/work/bones/promotionalBones2.png" />
-                                <p class="credito">Promotional Bones <br> Campaign - 2021</p>
-                            </div>
+                        <div class="fotografiaContenuto">
+                            <img class="immagine" src="../assets/img/work/bones/promotionalBones2.png" />
+                            <p class="credito">Promotional Bones <br> Campaign - 2021</p>
                         </div>
                     </div>
                 </div>
