--- a/work/onfire.html
+++ b/work/onfire.html
@@ -44,9 +44,13 @@
         </section>
 
         <section class="Banner">
-            <div class="contenitore">
-                <p class="titolo">On Fire</p>
-                <img class="imgBanner" src="../assets/img/work/onfire/onfireBanner.png">
+            <div class="improntaDigitaleContenitore">
+                <div class="contenitore">
+                    <p class="titolo">On Fire</p>
+                    <img class="imgBanner" src="../assets/img/work/onfire/onfireBanner.png">
+                    <img style="right: -10px; bottom: 50px;" class="improntaDigitale"
+                        src="../assets/img/improntaDigitale.png">
+                </div>
             </div>
         </section>
 
