--- a/work/strafattomano.html
+++ b/work/strafattomano.html
@@ -42,13 +42,18 @@
                 <a class="btnPrimary" href="../work.html">&#60;-</a>
             </div>
         </section>
-
+        
         <section class="Banner">
-            <div class="contenitore">
-                <p class="titolo">Strafattoamano</p>
-                <img class="imgBanner" src="../assets/img/work/strafattomano/strafattomanoBanner.png">
+            <div class="improntaDigitaleContenitore">
+                <div class="contenitore">
+                    <p class="titolo">Strafattoamano</p>
+                    <img class="imgBanner" src="../assets/img/work/strafattomano/strafattomanoBanner.png">
+                    <img style="right: -10px; bottom: 50px;" class="improntaDigitale"
+                        src="../assets/img/improntaDigitale.png">
+                </div>
             </div>
         </section>
+
 
         <section class="InformazioniProgetto">
             <div class="contenitore">
