--- a/work/strafattoalmercato.html
+++ b/work/strafattoalmercato.html
@@ -44,9 +44,13 @@
         </section>
 
         <section class="Banner">
-            <div class="contenitore">
-                <p class="titolo">Strafattoalmercato</p>
-                <img class="imgBanner" src="../assets/img/work/strafattoalmercato/strafattoalmercatoBanner.png">
+            <div class="improntaDigitaleContenitore">
+                <div class="contenitore">
+                    <p class="titolo">Strafattoalmercato</p>
+                    <img class="imgBanner" src="../assets/img/work/strafattoalmercato/strafattoalmercatoBanner.png">
+                    <img style="right: -10px; bottom: 50px;" class="improntaDigitale"
+                        src="../assets/img/improntaDigitale.png">
+                </div>
             </div>
         </section>
 
@@ -73,7 +77,8 @@
                         </div>
                         <div class="caratteristica">
                             <p class="caratteristicaTitolo">Service</p>
-                            <p class="caratteristicaDescrizione">Content syrategy and creation, videomaking and promotion.</p>
+                            <p class="caratteristicaDescrizione">Content syrategy and creation, videomaking and
+                                promotion.</p>
                         </div>
                         <div class="caratteristica">
                             <p class="caratteristicaTitolo">Year</p>
@@ -89,17 +94,21 @@
                 <div class="fotografiaContenuto destra">
                     <img class="immagine" src="../assets/img/work/strafattoalmercato/firstVideo.png" />
                     <p class="credito">My first video ever, 2023</p>
-                </a>
-            </div>
+                    </a>
+                </div>
         </section>
 
         <section class="Fotografia">
             <div class="contenitore">
-                <div class="fotografiaContenuto">
-                    <img class="immagine" src="../assets/img/work/strafattoalmercato/tiktokVideo.png" />
-                    <p class="credito">Tik tok video, 2023</p>
-                </a>
-            </div>
+                <div class="improntaDigitaleContenitore">
+                    <div class="fotografiaContenuto">
+                        <img class="immagine" src="../assets/img/work/strafattoalmercato/tiktokVideo.png" />
+                        <p class="credito">Tik tok video, 2023</p>
+                        </a>
+                        <img style="left: -100px; bottom: -12px; transform: rotate(-60deg);" class="improntaDigitale"
+                            src="../assets/img/improntaDigitale.png">
+                    </div>
+                </div>
         </section>
 
         <section class="Fotografia">
@@ -107,8 +116,8 @@
                 <div class="fotografiaContenuto destra">
                     <img class="immagine" src="../assets/img/work/strafattoalmercato/tiktokVideo2.png" />
                     <p class="credito">Tik tok video, 2023</p>
-                </a>
-            </div>
+                    </a>
+                </div>
         </section>
 
         <section class="DiPuiSu">
@@ -126,8 +135,7 @@
                     <div class="contenuto">
                         <div></div>
                         <div class="azioni">
-                            <a class="btnPrimary" style="min-width: 250px; font-size: 36px;"
-                                href="bones.html">Next
+                            <a class="btnPrimary" style="min-width: 250px; font-size: 36px;" href="bones.html">Next
                                 Project -></a>
                         </div>
                         <div></div>
